--- a/styles/style.css
+++ b/styles/style.css
@@ -8,14 +8,27 @@ html {
   block-size: 100%;
 }
 
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 .page {
+  display: flex;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  justify-content: center;
+  align-items: center;
 }
 
 h1,
@@ -47,5 +60,256 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
+}
+
+.content {
+  width: 1140px;
+  display: flex;
+  gap: 30px;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.title {
+  font-family: Oswald;
+  text-transform: uppercase;
+  font-size: 75px;
+  line-height: 94%;
+  letter-spacing: 0%;
+  margin-bottom: 26px;
+}
+.title span {
+  color: #545050;
+}
+
+/* Result block */
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+  margin-bottom: 20px;
+}
+
+.result__video-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.result__video-container,
+.content__list-container {
+  position: relative;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 5px;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 19px;
+  block-size: 19px;
+  border: 1px solid #fff;
+}
+
+.button {
+  background: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  text-align: center;
+  height: 34px;
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  cursor: pointer;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.search-form__submit-button {
+  min-width: 194px;
+  align-self: flex-end;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 16px;
+}
+
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  border: none;
+}
+
+.search-form__textfield {
+  appearance: none;
+  background: transparent;
+  border: none;
+  border-block-start: 1px solid #fff;
+  border-block-end: 1px solid #fff;
+  color: rgb(255 255 255 / 0.7);
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  min-inline-size: 225px;
+  max-inline-size: 225px;
+}
+
+.search-form__fieldset-title {
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 100%;
+}
+
+.search-form__label-text:active {
+  text-decoration: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:hover .search-form__label-text,
+.button:hover,
+.content__card-link:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: "";
+  background: #fff;
+  height: 15px;
+  width: 15px;
+}
+
+.button:focus,
+.content__card-link:focus {
+  outline: none;
+}
+
+.button:active,
+.content__list-item:active {
+  background: #545050;
+  text-decoration: none;
+}
+
+.search-form__label:has(:focus-visible),
+.button:focus-visible,
+.content__card-link:focus-visible {
+  outline-offset: 1px;
+  outline: 1px solid #fff;
+}
+/* Content block */
+
+.content__card-link_current,
+.content__card-link:active {
+  background: #545050;
+}
+
+.content__details {
+  min-width: 399px;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.content__list-item {
+  padding: 0 3px;
+}
+.content__list-container {
+  max-inline-size: 399px;
+  height: 298px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.content__video-card {
+  display: flex;
+}
+.content__list-container {
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  width: 196px;
+}
+
+.content__video-card-thumbnail {
+  height: 103px;
+  min-width: 194px;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: white;
+  display: block;
+}
+
+.content__video-card-title {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-family: Oswald, sans-serif;
+  text-transform: uppercase;
+  font-size: 30px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  font-weight: 700;
+}
+
+.content__video-card-description {
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+
+  line-height: 16.2px;
+  letter-spacing: 0%;
+}
+
+.content__video-card-title,
+.content__video-card-description {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.more-button {
+  min-inline-size: 389px;
+  margin: 2px;
+  min-height: 34px;
 }
